--- a/trening.html
+++ b/trening.html
@@ -37,6 +37,12 @@
         </div>
     </section>
 
+    <div class="folder" data-folder="trening">
+  <div class="folder-image"></div>
+  <p>Slike sa treninga</p>
+</div>
+
+
     <footer>
         <p>&copy; 2025 Airsoft Klub Kojot</p>
     </footer>
