--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,18 @@
   </div>
 </div>
   
+  <div class="gallery-folders">
+  <div class="folder" data-folder="trening">
+    <div class="folder-image"></div>
+    <p>Slike sa treninga</p>
+  </div>
+
+  <div class="folder" data-folder="milsim">
+    <div class="folder-image"></div>
+    <p>Slike sa Milsim-a</p>
+  </div>
+</div>
+
 
 <div id="simple-lightbox" class="hidden">
   <span id="lightbox-close">&times;</span>
