--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,15 @@
     <!-- Ovdje se dinamički pune slike JS-om -->
   </div>
 </div>
+
+   <!-- Prikaz slika iz foldera -->
+  <div class="folder-gallery hidden" id="gallery-section">
+    <button id="back-button">Nazad</button>
+    <div class="gallery-grid" id="gallery-images">
+      <!-- Slike će se ovde dinamički ubacivati -->
+    </div>
+  </div>
+</section>
   
 
 <div id="simple-lightbox" class="hidden">
