--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,9 @@
   </div>
 </div>
 
+   <!-- Dugme za nazad na početnu stranicu -->
+  <button id="back-to-home">Nazad na početnu</button>
+
 <!-- GALERIJA SLIKA PO FOLDERU -->
 <div id="folder-images" class="hidden">
   <button id="back-button">Nazad</button>
