--- a/gallery.html
+++ b/gallery.html
@@ -16,14 +16,11 @@
   <div class="folder" data-folder="trening">
     <img src="assets/trening-folder.jpg" alt="Trening Folder">
     <p>Slike sa treninga</p>
-   <div class="gallery-grid">
-    <!-- Ovde ubacujemo slike -->
   </div>
   <div class="folder" data-folder="milsim">
     <img src="assets/milsim-folder.jpg" alt="Milsim Folder">
     <p>Slike sa Milsim-a</p>
-  <div class="gallery-grid">
-    <!-- Ovde ubacujemo slike -->
+  <div>
 </div>
 
    <!-- Dugme za nazad na početnu stranicu -->
