--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
   <div class="folder" data-folder="milsim">
     <img src="assets/milsim-folder.jpg" alt="Milsim Folder">
     <p>Slike sa Milsim-a</p>
-  <div>
+      </div>
 </div>
 
    <!-- Dugme za nazad na početnu stranicu -->
