--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,7 @@
   <img id="lightbox-image" src="" alt="">
 </div>
 
+<script src="js/gallery.js" defer></script>
 <script src="js/main.js"></script>
   
 </body>
