--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,31 @@
   </div>
 </div>
 
+  <!------->
+  <section class="gallery">
+  <h2>Galerija</h2>
+
+  <div class="folder-list">
+    <div class="folder" data-folder="trening">
+      <div class="folder-image"></div>
+      <p>Slike sa treninga</p>
+    </div>
+    <div class="folder" data-folder="milsim">
+      <div class="folder-image"></div>
+      <p>Slike sa Milsim</p>
+    </div>
+  </div>
+
+  <div class="gallery-grid">
+    <!-- Ovde ubacujemo slike -->
+  </div>
+
+  <button id="backButton" style="display:none;">Nazad</button>
+</section>
+
+<script src="js/gallery.js"></script>
+
+
   
 
 <div id="simple-lightbox" class="hidden">
