--- a/trening.html
+++ b/trening.html
@@ -24,6 +24,7 @@
         <div class="gallery-grid">
             <a href="assets/trening1.jpg" data-lightbox="trening" data-title="Slika sa treninga">
             <img src="assets/trening1.jpg" alt="Trening 1">
+            <p>Lokacija: Sarajevo | Datum: 12.05.2025</p>
             </a>
 
            <a href="assets/trening2.jpg" data-lightbox="trening" data-title="Slika sa treninga 2">
