--- a/gallery.html
+++ b/gallery.html
@@ -24,9 +24,11 @@
 </div>
 
    <!-- Dugme za nazad na početnu stranicu -->
-  <button id="back-to-home">Nazad na početnu</button>
+  <div id="folder-images" class="hidden">
+  <div id="images-container"></div>
+  <button id="back-button">Nazad</button>
+</div>
 
-  
 
 <div id="simple-lightbox" class="hidden">
   <span id="lightbox-close">&times;</span>
