--- a/gallery.html
+++ b/gallery.html
@@ -24,10 +24,8 @@
 </div>
 
    <!-- Dugme za nazad na početnu stranicu -->
-  <div id="folder-images" class="hidden">
-  <div id="images-container"></div>
-  <button id="back-button">Nazad</button>
-</div>
+<button id="back-to-home">Nazad na početnu</button>
+
 
 
 <div id="simple-lightbox" class="hidden">
