--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,11 @@
 </div>
 
    <!-- Dugme za nazad na početnu stranicu -->
+  <div id="folder-images" class="hidden">
+  <div id="images-container"></div>
+  <button id="back-button">Nazad</button>
+</div>
+  
 <button id="back-to-home">Nazad na početnu</button>
 
 
