--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/anim.js" defer></script>
     <script src="js/slider.js" defer></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
     <header class="hero-slider">
