--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
   <title>Galerija</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/gallery.js" defer></script>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
 
