--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/smooth-scroll.js" defer></script>
     <script src="js/anim.js" defer></script>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
     <nav class="navbar">
