--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,9 @@
 
 <div id="simple-lightbox" class="hidden">
   <span id="lightbox-close">&times;</span>
+   <span id="lightbox-prev">&#10094;</span> <!-- ← strelica -->
   <img id="lightbox-image" src="" alt="">
+  <span id="lightbox-next">&#10095;</span> <!-- → strelica -->
 </div>
 
 
