--- a/gallery.html
+++ b/gallery.html
@@ -36,9 +36,9 @@
 
 <div id="simple-lightbox" class="hidden">
   <span id="lightbox-close">&times;</span>
-   <span id="lightbox-prev">&#10094;</span> <!-- ← strelica -->
+   <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
   <img id="lightbox-image" src="" alt="">
-  <span id="lightbox-next">&#10095;</span> <!-- → strelica -->
+   <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
 </div>
 
 
