--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,8 @@
    <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
   <img id="lightbox-image" src="" alt="">
    <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
+  <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
+    <!-- Ovdje ide tekst -->
 </div>
 
 
