--- a/trening.html
+++ b/trening.html
@@ -23,7 +23,7 @@
         <h2>Slike sa Treninga</h2>
         <div class="gallery-grid">
             <a href="assets/trening1.jpg" data-lightbox="trening" data-title="Slika sa treninga">
-            <img src="assets/trening1.jpg" alt="Trening 1">
+            <img src="assets/trening1.jpg" data-location="Sarajevo" data-date="2024-05-10" alt="Trening 1">
             </a>
 
            <a href="assets/trening2.jpg" data-lightbox="trening" data-title="Slika sa treninga 2">
@@ -31,7 +31,7 @@
            </a>
 
            <a href="assets/milsim1.jpg" data-lightbox="milsim" data-title="Slika sa milsima">
-           <img src="assets/milsim1.jpg" alt="Milsim 1">
+           <img src="assets/milsim1.jpg" data-location="Sarajevo" data-date="2024-05-10" alt="Milsim 1">
            </a>
             <!-- Dodaj još slika ovdje -->
         </div>
