--- a/gallery.html
+++ b/gallery.html
@@ -38,9 +38,9 @@
   <span id="lightbox-close">&times;</span>
    <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
   <img id="lightbox-image" src="" alt="">
-   <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
-  <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: bottom;">
+   <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
     <!-- Ovdje ide tekst -->
+   <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
 </div>
 
 
