--- a/milsim.html
+++ b/milsim.html
@@ -18,23 +18,16 @@
         </ul>
     </header>
 
-    <section class="container">
-        <h2>Slike sa Treninga</h2>
+   <section class="container">
+        <h2>Slike sa Milsim-a</h2>
         <div class="gallery-grid">
-            <a href="assets/trening1.jpg" data-lightbox="trening" data-title="Slika sa treninga">
-            <img src="assets/trening1.jpg" alt="Trening 1">
-            </a>
-
-           <a href="assets/trening2.jpg" data-lightbox="trening" data-title="Slika sa treninga 2">
-           <img src="assets/trening2.jpg" alt="Trening 2">
-           </a>
-
-           <a href="assets/milsim1.jpg" data-lightbox="milsim" data-title="Slika sa milsima">
-           <img src="assets/milsim1.jpg" alt="Milsim 1">
-           </a>
+            <a href="assets/milsim1.jpg" data-lightbox="milsim"><img src="assets/milsim1.jpg" alt="Milsim 1"></a>
+            <a href="assets/milsim2.jpg" data-lightbox="milsim"><img src="assets/milsim2.jpg" alt="Milsim 2"></a>
+            <a href="assets/milsim3.jpg" data-lightbox="milsim"><img src="assets/milsim3.jpg" alt="Milsim 3"></a>
             <!-- Dodaj još slika ovdje -->
         </div>
     </section>
+
 
     <div class="folder" data-folder="trening">
   <div class="folder-image"></div>
