--- a/milsim.html
+++ b/milsim.html
@@ -24,6 +24,7 @@
             <a href="assets/milsim1.jpg" data-lightbox="milsim"><img src="assets/milsim1.jpg" alt="Milsim 1"></a>
             <a href="assets/milsim2.jpg" data-lightbox="milsim"><img src="assets/milsim2.jpg" alt="Milsim 2"></a>
             <a href="assets/milsim3.jpg" data-lightbox="milsim"><img src="assets/milsim3.jpg" alt="Milsim 3"></a>
+            <a href="assets/milsim4.jpg" data-lightbox="milsim"><img src="assets/milsim4.jpg" alt="Milsim 4"></a>
             <!-- Dodaj još slika ovdje -->
         </div>
     </section>
