--- a/milsim.html
+++ b/milsim.html
@@ -28,6 +28,11 @@
             <a href="assets/milsim4.jpg" data-lightbox="milsim" data-title="Slika sa milsima">
            <img src="assets/milsim4.jpg" data-location="Sarajevo" data-date="2024-05-10" alt="Milsim 4">
            </a>
+<a href="assets/milsim4.jpg" data-lightbox="milsim">
+  <img src="assets/milsim4.jpg" alt="Milsim 4">
+</a>
+
+            
             <!-- Dodaj još slika ovdje -->
         </div>
     </section>
