--- a/gallery.html
+++ b/gallery.html
@@ -33,21 +33,13 @@
 </div>
 
 
-
-<div id="simple-lightbox" class="hidden">
+  <div id="simple-lightbox" class="hidden">
     <span id="lightbox-close">&times;</span>
-    <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span>
-    
-    <div id="simple-lightbox-content">
-        <img id="lightbox-image" src="" alt="">
-        <div id="lightbox-caption"></div>
-    </div>
-    
-    <span id="lightbox-next" class="lightbox-arrow">&#10095;</span>
-</div>
+     <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
+     <img id="lightbox-image" src="" alt="">
+     <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
+     <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
+  </div>
 
-
-
-  
 </body>
 </html>
