--- a/gallery.html
+++ b/gallery.html
@@ -41,5 +41,16 @@
      <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
   </div>
 
+     <footer>
+    <div class="footer-content">
+        <p>© 2025 Airsoft Klub Kojot | Dizajn: K4</p>
+        <div class="social-links">
+            <a href="#">Facebook</a> |
+            <a href="#">Instagram</a> |
+            <a href="#">YouTube</a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
