--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,10 @@
      <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
   </div>
 
+</section>
+
+</div> <!-- KRAJ page-wrapper -->
+
 <footer>
     <div class="footer-content">
         <p>© 2025 Airsoft Klub Kojot | Dizajn: K4</p>
