--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
   <script src="js/gallery.js" defer></script>
   <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
-<body>
+<body class="gallery-page">
 
 <section id="gallery-section">
   <h2>Galerija</h2>
