--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    <footer>
     <div class="footer-content">
-        <p>© 2025 Airsoft Klub Kojot | Dizajn: TvojTim</p>
+        <p>© 2025 Airsoft Klub Kojot | Dizajn: K4 </p>
         <div class="social-links">
             <a href="#">Facebook</a> |
             <a href="#">Instagram</a> |
