--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="hr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>O Nama | Airsoft Klub Kojot</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/smooth-scroll.js" defer></script>
