--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Galerija</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/gallery.js" defer></script>
