--- a/milsim.html
+++ b/milsim.html
@@ -2,6 +2,7 @@
 <html lang="hr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slike sa Milsim-a</title>
     <link rel="stylesheet" href="css/style.css">
