--- a/trening.html
+++ b/trening.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slike sa Treninga</title>
     <link rel="stylesheet" href="css/style.css">
