--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
 <body class="gallery-page">
 
 <section id="gallery-section">
+  <img src="assets/logo.png" alt="Logo" class="logo">
   <h2>Galerija</h2>
 
 <!-- FOLDERI -->
