--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,7 @@
 </head>
 <body class="gallery-page">
 
-
-  <img src="assets/logo.png" alt="Logo" class="logo">
+  <section id="gallery-section">
   <h2>Galerija</h2>
 
 <!-- FOLDERI -->
