--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
+
+<div class="hamburger-menu">
+    <div class="hamburger" onclick="toggleMenu()">
+        ☰
+    </div>
+    <div class="mobile-nav" id="mobileNav">
+        <a href="#pocetna">Početna</a>
+        <a href="#onama">O nama</a>
+        <a href="#galerija">Galerija</a>
+        <a href="#kontakt">Kontakt</a>
+    </div>
+</div>
+
+    
     <header class="hero-slider">
     <div class="slide fade">
         <img src="assets/slide1.jpg" alt="Slide 1">
