--- a/gallery.html
+++ b/gallery.html
@@ -55,5 +55,12 @@
     </div>
 </footer>
 
+  <script>
+function toggleMenu() {
+    const nav = document.getElementById('mobileNav');
+    nav.classList.toggle('show');
+}
+</script>
+
 </body>
 </html>
