--- a/index.html
+++ b/index.html
@@ -79,5 +79,13 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
     
     <script src="js/script.js"></script>
+
+      <script>
+function toggleMenu() {
+    const nav = document.getElementById('mobileNav');
+    nav.classList.toggle('show');
+}
+</script>
+    
 </body>
 </html>
