--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
 </head>
 <body>
 
-<div class="hamburger-menu">
-    <div class="hamburger" onclick="toggleMenu()">
-        ☰
-    </div>
-    <div class="mobile-nav" id="mobileNav">
-        <a href="#pocetna">Početna</a>
-        <a href="#onama">O nama</a>
-        <a href="#galerija">Galerija</a>
-        <a href="#kontakt">Kontakt</a>
-    </div>
-</div>
+<div class="hamburger" onclick="toggleMenu()">☰</div>
+<nav class="mobile-menu">
+    <a href="index.html">Početna</a>
+    <a href="galerija.html">Galerija</a>
+    <a href="onama.html">O nama</a>
+    <a href="kontakt.html">Kontakt</a>
+</nav>
 
     
     <header class="hero-slider">
