--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
     <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
-
-<div class="hamburger" onclick="toggleMenu()">☰</div>
-<nav class="mobile-menu">
-    <a href="index.html">Početna</a>
-    <a href="galerija.html">Galerija</a>
-    <a href="onama.html">O nama</a>
-    <a href="kontakt.html">Kontakt</a>
-</nav>
-
     
     <header class="hero-slider">
     <div class="slide fade">
@@ -44,6 +35,14 @@
                 <li><a href="gallery.html">Galerija</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+             <div class="mobile-menu">
+        <a href="index.html">Početna</a>
+        <a href="about.html">O nama</a>
+        <a href="gallery.html">Galerija</a>
+        <a href="contact.html">Kontakt</a>
+    </div>
+</nav>
         </nav>
         <div class="hero-content">
             <h1>Dobrodošli u Airsoft Klub Kojot</h1>
