--- a/index.html
+++ b/index.html
@@ -27,22 +27,26 @@
     </div>
 
     <div class="overlay">
-        <nav class="navbar">
-            <img src="assets/logo.png" alt="Logo" class="logo">
-            <ul class="nav-links">
-                <li><a href="index.html">Početna</a></li>
-                <li><a href="about.html">O nama</a></li>
-                <li><a href="gallery.html">Galerija</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-            <div class="hamburger" onclick="toggleMenu()">☰</div>
-             <div class="mobile-menu">
-        <a href="index.html">Početna</a>
-        <a href="about.html">O nama</a>
-        <a href="gallery.html">Galerija</a>
-        <a href="contact.html">Kontakt</a>
-    </div>
+         <nav class="navbar">
+         <img src="assets/logo.png" alt="Logo" class="logo">
+
+    <ul class="nav-links desktop-menu">
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="about.html">O nama</a></li>
+        <li><a href="gallery.html">Galerija</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+    </ul>
+
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+    <ul class="mobile-menu">
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="about.html">O nama</a></li>
+        <li><a href="gallery.html">Galerija</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+    </ul>
 </nav>
+
         </nav>
         <div class="hero-content">
             <h1>Dobrodošli u Airsoft Klub Kojot</h1>
