--- a/about.html
+++ b/about.html
@@ -11,14 +11,25 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="assets/logo.png" alt="Logo" class="logo">
-        <ul class="nav-links">
-            <li><a href="index.html">Početna</a></li>
-            <li><a href="about.html">O Nama</a></li>
-            <li><a href="gallery.html">Galerija</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
-        </ul>
-    </nav>
+    <img src="assets/logo.png" alt="Logo" class="logo">
+
+    <ul class="nav-links desktop-menu">
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="about.html">O nama</a></li>
+        <li><a href="gallery.html">Galerija</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+    </ul>
+
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+    <ul class="mobile-menu">
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="about.html">O nama</a></li>
+        <li><a href="gallery.html">Galerija</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+    </ul>
+</nav>
+
 
     <section class="page-section">
         <div class="container">
