--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,18 @@
         </div>
     </div>
 </footer>
+
+    <script>
+function toggleMenu() {
+    const menu = document.querySelector('.mobile-menu');
+    if (menu.style.display === 'flex') {
+        menu.style.display = 'none';
+    } else {
+        menu.style.display = 'flex';
+    }
+}
+</script>
+
     
 </body>
 </html>
