--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <div class="overlay">
          <nav class="navbar">
+         <a href="index.html">
          <img src="assets/logo.png" alt="Logo" class="logo">
 
     <ul class="nav-links desktop-menu">
