--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <nav class="navbar">
+    <a href="index.html">
     <img src="assets/logo.png" alt="Logo" class="logo">
 
     <ul class="nav-links desktop-menu">
