--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,7 @@
      <img id="lightbox-image" src="" alt="">
      <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
      <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;">
+     </div>
   </div>
 </section>
 </div> <!-- KRAJ page-wrapper -->
