--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
 
 
   <div id="simple-lightbox" class="hidden">
+    <div class="lightbox-overlay"></div> <!-- OVO DODAJ -->
     <span id="lightbox-close">&times;</span>
      <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
      <img id="lightbox-image" src="" alt="">
