--- a/gallery.html
+++ b/gallery.html
@@ -35,12 +35,14 @@
 
 
 <div id="simple-lightbox" class="hidden">
-    <img id="lightbox-image" src="" alt="Pregled slike">
-    <button id="lightbox-close">X</button>
-    <button id="lightbox-prev">⟨</button>
-    <button id="lightbox-next">⟩</button>
-    <div id="lightbox-caption"></div>
-</div>
+    <span id="lightbox-close">&times;</span>
+     <span id="lightbox-prev" class="lightbox-arrow">&#10094;</span> <!-- levo -->
+     <img id="lightbox-image" src="" alt="">
+     <span id="lightbox-next" class="lightbox-arrow">&#10095;</span> <!-- desno -->
+     <div id="lightbox-caption" style="color: #fff; margin-top: 10px; text-align: center;"> </div>
+  </div>
+</section>
+</div> <!-- KRAJ page-wrapper -->
 
 
 <footer>
