--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,13 @@
 </div> <!-- KRAJ page-wrapper -->
 
 
+<div id="simple-lightbox">
+    <img id="lightbox-image" src="" alt="Pregled slike">
+    <button id="lightbox-close">Zatvori</button>
+</div>
+
+  
+
 <footer>
     <div class="footer-content">
         <p>© 2025 Airsoft Klub Kojot | Dizajn: K4</p>
