--- a/contact.html
+++ b/contact.html
@@ -32,32 +32,26 @@
     </ul>
 </nav>
 
+<div class="social-links">
+    <h3>Pratite nas</h3>
+    <a href="https://www.instagram.com/airsoftklubkojot" target="_blank" aria-label="Instagram">
+        <svg width="30" height="30" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 2 .3 2.5.5.6.2 1.1.5 1.6 1 .5.5.8 1 .9 1.6.2.5.4 1.3.5 2.5.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 2-.5 2.5-.2.6-.5 1.1-1 1.6-.5.5-1 .8-1.6.9-.5.2-1.3.4-2.5.5-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-2-.3-2.5-.5-.6-.2-1.1-.5-1.6-1-.5-.5-.8-1-.9-1.6-.2-.5-.4-1.3-.5-2.5C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-2 .5-2.5.2-.6.5-1.1 1-1.6.5-.5 1-.8 1.6-.9.5-.2 1.3-.4 2.5-.5C8.4 2.2 8.8 2.2 12 2.2zm0-2.2C8.7 0 8.3 0 7 0 5.7 0 4.6.2 3.7.5c-.9.3-1.7.7-2.4 1.4S.7 3.7.4 4.6C.1 5.6 0 6.7 0 8c0 1.3 0 1.7 0 5s0 3.7.1 5c.1 1.3.3 2.4.6 3.4.3.9.7 1.7 1.4 2.4.7.7 1.5 1.1 2.4 1.4 1 .3 2.1.5 3.4.6 1.3.1 1.7.1 5 .1s3.7 0 5-.1c1.3-.1 2.4-.3 3.4-.6.9-.3 1.7-.7 2.4-1.4.7-.7 1.1-1.5 1.4-2.4.3-1 .5-2.1.6-3.4.1-1.3.1-1.7.1-5s0-3.7-.1-5c-.1-1.3-.3-2.4-.6-3.4-.3-.9-.7-1.7-1.4-2.4-.7-.7-1.5-1.1-2.4-1.4-1-.3-2.1-.5-3.4-.6C15.7 0 15.3 0 12 0z"/>
+            <path d="M12 5.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0 10.2a4 4 0 1 1 0-8.1 4 4 0 0 1 0 8.1zm6.4-10.8a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0z"/>
+        </svg>
+    </a>
+    <a href="https://www.facebook.com/airsoftklubkojot" target="_blank" aria-label="Facebook">
+        <svg width="30" height="30" viewBox="0 0 24 24" fill="#1877F2" xmlns="http://www.w3.org/2000/svg">
+            <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24H12.82v-9.294H9.692V11.31h3.128V8.41c0-3.1 1.893-4.788 4.66-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.917.001c-1.504 0-1.796.715-1.796 1.763v2.31h3.587l-.467 3.396h-3.12V24h6.116C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/>
+        </svg>
+    </a>
+    <a href="https://www.tiktok.com/@airsoftklubkojot" target="_blank" aria-label="TikTok">
+        <svg width="30" height="30" viewBox="0 0 24 24" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12.75 0h3.188c.103 1.243.541 2.413 1.293 3.375a5.59 5.59 0 0 0 3.337 1.95v3.188a8.775 8.775 0 0 1-4.875-1.462v8.662c0 4.43-3.613 8.031-8.063 8.031C3.613 23.744 0 20.13 0 15.7c0-4.45 3.6-8.063 8.031-8.063.525 0 1.05.053 1.556.15v3.3a4.594 4.594 0 0 0-1.556-.281 4.8 4.8 0 0 0-4.781 4.794c0 2.625 2.156 4.781 4.781 4.781a4.8 4.8 0 0 0 4.781-4.781V0z"/>
+        </svg>
+    </a>
+</div>
 
-    <section class="page-section">
-        <div class="container">
-            <h2>Kontakt</h2>
-            <p>Možete nas kontaktirati putem e-maila: <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a></p>
-            <p>Pratite nas na društvenim mrežama: <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
-        </div>
-    </section>
-
-    <section class="newsletter container fade-in">
-    <h2>Prijavi se na naš newsletter</h2>
-    <form>
-        <input type="email" placeholder="Tvoj email" required>
-        <button type="submit">Prijavi se</button>
-    </form>
-</section>
-
-    <section class="contact-form container fade-in">
-    <h2>Kontaktiraj nas</h2>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-        <input type="text" name="name" placeholder="Tvoje ime" required>
-        <input type="email" name="email" placeholder="Tvoj email" required>
-        <textarea name="message" placeholder="Poruka" required></textarea>
-        <button type="submit">Pošalji</button>
-    </form>
-</section>
 
   <footer>
     <div class="footer-content">
