--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="index.html">Početna</a></li>
         <li><a href="about.html">O nama</a></li>
         <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="contact.html">Godiscnji plan</a></li>
     </ul>
 
     <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -44,7 +44,7 @@
         <li><a href="index.html">Početna</a></li>
         <li><a href="about.html">O nama</a></li>
         <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="contact.html">Godiscnji plan</a></li>
     </ul>
 </nav>
 
