--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li><a href="index.html">Početna</a></li>
         <li><a href="about.html">O nama</a></li>
         <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="contact.html">Godiscnji plan</a></li>
     </ul>
 
     <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -28,7 +28,7 @@
         <li><a href="index.html">Početna</a></li>
         <li><a href="about.html">O nama</a></li>
         <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="contact.html">Godiscnji plan</a></li>
     </ul>
 </nav>
 
