--- a/about.html
+++ b/about.html
@@ -36,22 +36,22 @@
     <section class="page-section">
         <div class="container">
             <h2>O Nama</h2>
-            <p>Airsoft Klub Kojot osnovan je 5. maja 2023. godine od strane pet entuzijasta zaljubljenih u airsoft.
-               Od samog početka, centralnu ulogu u organizaciji i vođstvu kluba preuzeo je Selvir Jakupović, jedan od osnivača i lider ekipe na terenu.
-               Njegova posvećenost, taktičko znanje i želja da okuplja ljude oko zajedničke strasti dali su klubu prepoznatljiv identitet.
+            <p>Airsoft Klub Kojot osnovan je 5. maja 2023. godine od strane pet entuzijasta zaljubljenih u airsoft.</p>
+            </p>Od samog početka, centralnu ulogu u organizaciji i vođstvu kluba preuzeo je Selvir Jakupović, jedan od osnivača i lider ekipe na terenu.</p>
+            </p>Njegova posvećenost, taktičko znanje i želja da okuplja ljude oko zajedničke strasti dali su klubu prepoznatljiv identitet.</p>
 
-               Klub je nastao sa jasnom idejom – izgraditi zajednicu zasnovanu na timskom duhu, fer-pleju i adrenalinskim izazovima.
-               Članovi Kojota ne treniraju samo zbog igre; oni treniraju da bi rasli kao tim i učili jedni od drugih, podižući nivo igre iz nedelje u nedelju.
+            </p>Klub je nastao sa jasnom idejom – izgraditi zajednicu zasnovanu na timskom duhu, fer-pleju i adrenalinskim izazovima.</p>
+            </p>Članovi Kojota ne treniraju samo zbog igre; oni treniraju da bi rasli kao tim i učili jedni od drugih, podižući nivo igre iz nedelje u nedelju.</p>
 
-               Već u prvoj godini postojanja, Airsoft Klub Kojot uspešno je organizovao svoju prvu veliku misiju pod nazivom Stone Valley,
-               koja je okupila brojne airsoft ekipe iz regiona. 
-               Ova misija bila je veliki test taktike, izdržljivosti i timske koordinacije
-               ali i dokaz da klub zna kako da stvori događaj koji ostavlja utisak i gradi reputaciju.
+            </p>Već u prvoj godini postojanja, Airsoft Klub Kojot uspešno je organizovao svoju prvu veliku misiju pod nazivom Stone Valley,</p>
+            </p>koja je okupila brojne airsoft ekipe iz regiona.</p>
+            </p>Ova misija bila je veliki test taktike, izdržljivosti i timske koordinacije</p>
+            </p>ali i dokaz da klub zna kako da stvori događaj koji ostavlja utisak i gradi reputaciju.</p>
 
-               Danas, Airsoft Klub Kojot okuplja sve više članova, pružajući im priliku da učestvuju u treninzima
-               turnirima, misijama i prijateljskim susretima.
-               Klub je otvoren za sve nove igrače koji dele iste vrednosti i žele da iskuse uzbuđenje timske igre u bezbednom i podržavajućem okruženju.
-               Cilj Kojota je jasan: stalno napredovanje, jačanje zajednice i stvaranje nezaboravnih airsoft iskustava.</p>
+            </p>Danas, Airsoft Klub Kojot okuplja sve više članova, pružajući im priliku da učestvuju u treninzima</p>
+            </p>turnirima, misijama i prijateljskim susretima.</p>
+            </p>Klub je otvoren za sve nove igrače koji dele iste vrednosti i žele da iskuse uzbuđenje timske igre u bezbednom i podržavajućem okruženju.</p>
+            </p>Cilj Kojota je jasan: stalno napredovanje, jačanje zajednice i stvaranje nezaboravnih airsoft iskustava.</p>
         </div>
     </section>
 
