--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <section class="partners container fade-in">
     <h2>Naši Sponzori</h2>
     <div class="partner-logos">
+        <a href="https://www.begadi.com" target="_blank">
         <img src="assets/partner1.png" alt="Partner 1">
     </div>
 </section>
