--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="footer-content">
         <p>© 2025 Airsoft Klub Kojot | Dizajn: K4 </p>
         <div class="social-links">
-            <a href="#">Facebook</a> |
+             <a href="https://www.facebook.com/airsoftklubkojot" target="_blank">Facebook</a> |
             <a href="#">Instagram</a> |
             <a href="#">YouTube</a>
         </div>
