--- a/index.html
+++ b/index.html
@@ -68,17 +68,15 @@
 </section>
     
 
-   <footer>
-  <div class="footer-content">
-    <p class="copyright">© 2025 Airsoft Klub Kojot. Sva prava zadržana.</p>
-    <div class="social-links">
-      <a href="https://www.facebook.com/airsoftklubkojot" target="_blank">Facebook</a>
-      <span>|</span>
-      <a href="https://www.instagram.com/airsoftklubkojot" target="_blank">Instagram</a>
-      <span>|</span>
-      <a href="https://www.tiktok.com/@ask.kojot" target="_blank">Tik Tok</a> |
-    <p class="design">Dizajn: <strong>K4</strong></p>
-  </div>
+<footer>
+    <div class="footer-content">
+        <p>© 2025 Airsoft Klub Kojot | Dizajn: K4 </p>
+        <div class="social-links">
+             <a href="https://www.facebook.com/profile.php?id=100091837857196" target="_blank">Facebook</a> |
+             <a href="https://www.instagram.com/ask_kojot/" target="_blank">Instagram</a> |
+             <a href="https://www.tiktok.com/@ask.kojot" target="_blank">Tik Tok</a> |
+        </div>
+    </div>
 </footer>
 
 
