--- a/index.html
+++ b/index.html
@@ -69,15 +69,26 @@
     
 
 <footer>
-    <div class="footer-content">
-        <p>© 2025 Airsoft Klub Kojot | Dizajn: K4 </p>
-        <div class="social-links">
-             <a href="https://www.facebook.com/profile.php?id=100091837857196" target="_blank">Facebook</a> |
-             <a href="https://www.instagram.com/ask_kojot/" target="_blank">Instagram</a> |
-             <a href="https://www.tiktok.com/@ask.kojot" target="_blank">Tik Tok</a> |
-        </div>
+  <div class="footer-container">
+    <div class="footer-logo">
+      <p>© 2025 Airsoft Klub Kojot</p>
+      <p class="design">Dizajn: <strong>K4</strong></p>
     </div>
+
+    <div class="footer-socials">
+      <a href="https://www.facebook.com/airsoftklubkojot" target="_blank" title="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/airsoftklubkojot" target="_blank" title="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.youtube.com/@airsoftklubkojot" target="_blank" title="YouTube">
+        <i class="fab fa-youtube"></i>
+      </a>
+    </div>
+  </div>
 </footer>
+
 
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
