--- a/contact.html
+++ b/contact.html
@@ -110,13 +110,13 @@
     
 
 
-  <footer>
+<footer>
     <div class="footer-content">
-        <p>© 2025 Airsoft Klub Kojot | Dizajn: TvojTim</p>
+        <p>© 2025 Airsoft Klub Kojot | Dizajn: K4 </p>
         <div class="social-links">
-            <a href="#">Facebook</a> |
-            <a href="#">Instagram</a> |
-            <a href="#">YouTube</a>
+             <a href="https://www.facebook.com/profile.php?id=100091837857196" target="_blank">Facebook</a> |
+             <a href="https://www.instagram.com/ask_kojot/" target="_blank">Instagram</a> |
+             <a href="https://www.tiktok.com/@ask.kojot" target="_blank">Tik Tok</a> |
         </div>
     </div>
 </footer>
