--- a/gallery.html
+++ b/gallery.html
@@ -57,6 +57,21 @@
     </div>
 </footer>
 
+<style>
+  body.gallery-page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  #gallery-section {
+    flex-grow: 1;
+  }
+
+  footer {
+    margin-top: auto;
+  }
+</style>
 
 
 </body>
