--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     }
 
     footer {
-      background-color: #111;
+      background-color: #34 34 34;
       color: white;
       text-align: center;
       padding: 10px 20px;
