--- a/gallery.html
+++ b/gallery.html
@@ -27,14 +27,14 @@
     }
 
     footer {
-      background-color: #34 34 34;
+      background-color: #222;
       color: white;
       text-align: center;
       padding: 10px 20px;
     }
 
     .footer-content .social-links a {
-      color: #ccc;
+      color: #7ac142;
       text-decoration: none;
       margin: 0 5px;
     }
